mv books to notes

--- a/notes.org
+++ b/notes.org
@@ -192,24 +192,26 @@ forensics and audit systems, and so on.
 >
 > These four elements work together to enable trust. 
 
-
-[[https://blog.ethereum.org/2014/12/26/secret-sharing-daos-crypto-2-0/][Secret Sharing DAOs: The Other Crypto 2.0]], 2014
+> In many ways, trusting technology is harder than trusting people. 
+Would you rather trust a human legal system or the details of 
+some computer code you don’t have the expertise to audit?
 
 
 *** Papers
 
 [[https://people.csail.mit.edu/rivest/pubs/PSNR20.pdf][Going from Bad to Worse: From Internet Voting to Blockchain Voting]], November 6, 2020 (DRAFT)
-> 
-
-
 
 ** DAO                                           :blockchain:dao:@blockchain:
 :PROPERTIES:
-:EXPORT_FILE_NAME: DAO
+:EXPORT_FILE_NAME: dao
 :EXPORT_DATE: 2020-11-16
 :EXPORT_HUGO_SECTION: blockchain
 :EXPORT_DESCRIPTION: Reading notes about the community DAO.
 :END:
+
+
+[[https://blog.ethereum.org/2014/12/26/secret-sharing-daos-crypto-2-0/][Secret Sharing DAOs: The Other Crypto 2.0]], 2014
+
 
 [[https://github.com/DavidJohnstonCEO/DecentralizedApplications][The General Theory of Decentralized Applications, Dapps]]
 > The concept of a Dapp is so powerful and elegant, because it does not 
@@ -357,3 +359,59 @@ what is going on in the community, and they are only pursuing arbitrage opportun
 
 > The Wiki-based ComCo Management Framework contains one's collaboration history, 
 which can be traced back as the credential check.
+
+** Philosophy and Minds                    :philosophy:mind:thought:@reading:
+:PROPERTIES:
+:EXPORT_FILE_NAME: philosophy-and-minds
+:EXPORT_DATE: 2020-11-16
+:EXPORT_HUGO_SECTION: reading
+:EXPORT_DESCRIPTION: Learning from great minds.
+:END:
+
+*** Videos
+
+[[https://www.youtube.com/watch?v=SOr1YYRljV8][Yaron Brook: Ayn Rand and the Philosophy of Objectivism | Lex Fridman Podcast #138]]
+
+** Books                                              :reading:book:@reading:
+:PROPERTIES:
+:EXPORT_FILE_NAME: books
+:EXPORT_DATE: 2020-11-13
+:EXPORT_HUGO_SECTION: reading
+:EXPORT_DESCRIPTION: Books I've read. 
+:END:
+
+Aimee's [goodreads](https://www.goodreads.com/user/show/90889710-aimee-zhu)
+
+
+*** 2020
+
+- Guns, Germs, and Steel: The Fates of Human Societies
+- [[https://www.amazon.com/Art-War-AmazonClassics-Sun-Tzu-ebook/dp/B073QR86XF/ref=sr_1_4][The Art of War]]
+- [[https://www.amazon.com/15-Minute-Read-Power-Subconscious-ebook/dp/B08541YNTW/ref=rtpb_2/138-2049715-3003242][The Power of Your Subconscious Mind]]
+- [[https://landing.coingecko.com/how-to-defi/][How to DeFi]]
+- [[https://www.goodreads.com/book/show/38819529-the-hobbit][The Hobbit]]
+- [[https://www.goodreads.com/book/show/50491494-options-trading-crash-course][Options Trading Crash Course]]
+- [[https://www.amazon.com/Franklins-Autobiography-Eclectic-English-Classics-ebook/dp/B0052GE5GC/][Franklin's Autobiography]]
+- [[https://www.goodreads.com/notes/38145718-thomas-edison/90889710-aimee-zhu][Thomas Edison: A Captivating Guide to the Life of a Genius Inventor]]
+- [[https://www.amazon.com/Elements-Style-Fourth-William-Strunk-ebook/dp/B07NPN5HTP/ref=sr_1_4][The elements of style]]
+- [[https://www.amazon.com/Out-My-Mind-Sharon-Draper-ebook/dp/B003ATPRNI/ref=sr_1_3][Out of my mind]]
+- [[https://www.amazon.com/Manage-Your-Day-Day-Creative-ebook/dp/B00B77UE4W/ref=sr_1_2][Manage Your Day-to-Day: Build Your Routine, Find Your Focus, and Sharpen Your Creative Mind]]
+- [[https://www.amazon.com/Animal-Farm-Fairy-Modern-Classic-ebook/dp/B003K16PUU/ref=sr_1_1][Animal Farm]]
+- [[https://www.amazon.com/Decisions-Death-Street-Kindle-Single-ebook/dp/B00TO1J78M/ref=sr_1_1][Decisions: Life and Death on Wall Street]]
+- [[https://www.amazon.com/Little-Still-Market-Books-Profits-ebook/dp/B003VWCQB0/ref=sr_1_1][The Little Book that Still Beats the Market]]
+- [[https://www.amazon.com/If-You-Tell-Unbreakable-Sisterhood-ebook/dp/B07Q5TL9SQ/ref=sr_1_3][If You Tell: A True Story of Murder, Family Secrets, and the Unbreakable Bond of Sisterhood]]
+- [[https://www.amazon.com/Think-Grow-Rich-Napoleon-Hill-ebook/dp/B08776ZZY4/ref=sr_1_3][Think and Grow Rich]]
+- [[https://www.goodreads.com/notes/36992849-work-less-make-more/90889710-aimee-zhu?ref=bsop][Work Less, Make More]]
+- 卡耐基自传
+  - ref: origin [[https://www.amazon.com/Autobiography-Andrew-Carnegie-Gospel-Classics-ebook/dp/B002G54Y3Q/ref=sr_1_4][The Autobiography of Andrew Carnegie and The Gospel of Wealth]]
+- [[https://www.amazon.cn/dp/B087JNZ6ZL/ref=sr_1_1][一生的旅程：迪士尼 CEO 自述]]
+  - ref: origin [[https://www.amazon.com/gp/product/0399592091/ref=ox_sc_act_title_1][The Ride of a Lifetime: Lessons Learned from 15 Years as CEO of the Walt Disney Company]]
+- [[https://www.goodreads.com/book/show/51957605][股票作手回忆录]]
+  - ref: origin [[https://www.amazon.com/REMINISCENCES-STOCK-OPERATOR-Edwin-Lefevre-ebook/dp/B07ND35YTJ/ref=tmm_kin_swatch_0][Reminiscences of a Stock Operator]]
+- [[https://www.amazon.cn/dp/B00U3NDI1C/ref=sr_1_1][黄金屋：宏观对冲基金顶尖交易者的掘金之道]]
+  - ref: origin [[https://www.amazon.com/Inside-House-Money-Traders-Profiting-ebook/dp/B00GYXP8CW/ref=sr_1_1][Inside the House of Money: Top Hedge Fund Traders on Profiting in the Global Markets]]
+- [[https://www.goodreads.com/book/show/35561327][一本小小的红色写作书]]
+- [[https://www.amazon.cn/dp/B01HRYE86S/ref=sr_1_1][血疫:埃博拉的故事]]
+  - ref: origin [[https://www.amazon.com/Hot-Zone-Terrifying-Story-Origins-ebook/dp/B007DCU4IQ/ref=sr_1_1][The Hot Zone: The Terrifying True Story of the Origins of the Ebola Virus]]
+
+
