move files to notes.org

--- a/walnuts.org
+++ b/walnuts.org
@@ -1,13 +1,12 @@
 #+title: Walnuts Hacklog
 #+date: 2020-11-02
-#+hugo_tags: hack blockchain walnuts log
+#+hugo_tags: hack blockchain programming walnuts log
 #+hugo_categories: hacking
 #+hugo_section: hacking
 #+hugo_base_dir: . 
 
 #+begin_description
 
-My hacklog about Walnuts, a toy blockchain.
 
 #+end_description
 
@@ -16,26 +15,80 @@ My hacklog about Walnuts, a toy blockchain.
 - [x] chrono for Utc time as timestamp
 - [x] serde for storage, write & read to a file on disc
 - [x] cli
-- [ ] create a new block from commandline, 
-      and save it in a file in json
+- [x] create a new block from commandline, 
+      and save it in a json file
 - [ ] create transactions from commandline
 - [ ] 256k for tx signature: https://docs.rs/k256/0.5.10/k256/
+- [ ] nouce verify
+- [ ] keep mining
+- [ ] clean code
     
 * Hacklog
 
 ** 2020-11-16
 
-- [ ] create a new block from commandline, 
-      and save it in a file in json
+- Created a new block (Mine) from commandline, 
+  and saved it to walnutsdata.txt
+- Learned: always thinking in type system
+
+Test the sample code from [[https://serde.rs/][serde.rs]] 
+in my blockchain.rs code:
+
+#+begin_src rust
+let serialized = serde_json::to_string(&block).unwrap();
+println!("serialized = {}", serialized);
+
+let deserialized: Block = serde_json::from_str(&serialized).unwrap();
+println!("deserialized = {:?}", deserialized);
+#+end_src 
+
+The output:
+
+#+begin_src shell
+$ cargo run -- mine
+
+    Finished dev [unoptimized + debuginfo] target(s) in 3.04s
+     Running `target/debug/walnuts mine`
+Opt {
+    cmd: Mine,
+}
+serialized = {"header":{"prev_block_hash":[166,5,88,255,235,6,147,45,180,203,105,29,131,4,186,246,69,115,54,230,65,190,65,172,108,106,33,220,51,45,68,150],"time":1605002954274,"nonce":1},"txs":[]}
+deserialized = Block { header: BlockHeader { prev_block_hash: [166, 5, 88, 255, 235, 6, 147, 45, 180, 203, 105, 29, 131, 4, 186, 246, 69, 115, 54, 230, 65, 190, 65, 172, 108, 106, 33, 220, 51, 45, 68, 150], time: 1605002954274, nonce: 1 }, txs: [] }
+Genesis block is: [166, 5, 88, 255, 235, 6, 147, 45, 180, 203, 105, 29, 131, 4, 186, 246, 69, 115, 54, 230, 65, 190, 65, 172, 108, 106, 33, 220, 51, 45, 68, 150]
+write to walnutsdata.txt
+check mine funtion: Ok(())
+#+end_src
+
+Read blockchain data from =walnutsdata.txt=
+
+#+begin_src rust
+let fout = File::open("walnutsdata.txt")?;
+let mut buf_reader = BufReader::new(fout);
+let mut reader = String::new();
+
+buf_reader.read_to_string(&mut reader)?;
+println!("read from walnutsdata.txt in string: {:?}", &reader);
+
+let deserialized: Block = serde_json::from_str(&reader).unwrap();
+println!("deserialized data from walnutsdata.txt: {:?}", deserialized);
+#+end_src 
+
+The output of reading data:
+
+#+begin_src shell
+$ cargo run -- mine
 
 
-
-
-
-
-
-
-
+    Finished dev [unoptimized + debuginfo] target(s) in 1.09s
+     Running `target/debug/walnuts mine`
+Opt {
+    cmd: Mine,
+}
+write to walnutsdata.txt
+read from walnutsdata.txt in string: "{\"header\":{\"prev_block_hash\":[166,5,88,255,235,6,147,45,180,203,105,29,131,4,186,246,69,115,54,230,65,190,65,172,108,106,33,220,51,45,68,150],\"time\":1605002954274,\"nonce\":1},\"txs\":[]}"
+deserialized data from walnutsdata.txt: Block { header: BlockHeader { prev_block_hash: [166, 5, 88, 255, 235, 6, 147, 45, 180, 203, 105, 29, 131, 4, 186, 246, 69, 115, 54, 230, 65, 190, 65, 172, 108, 106, 33, 220, 51, 45, 68, 150], time: 1605002954274, nonce: 1 }, txs: [] }
+check mine funtion: Ok(())
+#+end_src
 
 ** 2020-11-13
 
